# cursers

./: README-pypi.md  README.md  lefthook.yml  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml
examples/: move_control.py  move_control_gravity.py
src/cursers/: __init__.py  app.py  thread.py
tests/: test_app.py  test_screen.py  test_thread.py  test_threaded_app.py
