[project]
name = "cursers"
version = "0.1.0"
dependencies = []
requires-python = ">=3.13"
authors = [
  { name = "Alfi Maulana", email = "alfi.maulana.f@gmail.com" },
]
description = "A minimal threaded wrapper for Python curses "
readme = "README.md"
license = "MIT"
keywords = ["curses", "terminal", "tui", "threading", "wrapper"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Terminals",
]

[project.urls]
repository = "https://github.com/threeal/cursers.git"
issues = "https://github.com/threeal/cursers/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "lefthook>=1.11.14",
  "ruff>=0.11.13",
]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["D"]
